@@ -1101,6 +1101,35 @@ init|=
 literal|0
 decl_stmt|;
 specifier|public
+specifier|transient
+name|String
+name|jobId
+decl_stmt|;
+specifier|public
+name|String
+name|getJobId
+parameter_list|()
+block|{
+return|return
+name|jobId
+return|;
+block|}
+specifier|public
+name|void
+name|setJobId
+parameter_list|(
+name|String
+name|jobId
+parameter_list|)
+block|{
+name|this
+operator|.
+name|jobId
+operator|=
+name|jobId
+expr_stmt|;
+block|}
+specifier|public
 specifier|static
 name|MemoryMXBean
 name|memoryMXBean
@@ -4013,6 +4042,13 @@ name|submitJob
 argument_list|(
 name|job
 argument_list|)
+expr_stmt|;
+name|jobId
+operator|=
+name|rj
+operator|.
+name|getJobID
+argument_list|()
 expr_stmt|;
 comment|// replace it back
 if|if
